# bevy-asteroid-game-showcase

./: .gitignore  Cargo.toml  README.md  build-web.sh
assets/models/asteroids/asteroid1/: Asteroid1.glb  Asteroid1.gltf
assets/models/asteroids/asteroid2/: Asteroid2.glb
assets/models/asteroids/asteroid3/: Asteroid3.glb
assets/models/rocket/: Rocket.glb  Rocket.gltf
public/: index.html
src/: asteroids.rs  gamedata.rs  gamestate.rs  main.rs  rocket.rs  screens.rs
src/screens/: assets.rs  menu.rs
src/screens/components/: fps_counter.rs
