[package]
name = "bevy_playground"
version = "0.1.0"
authors = ["nic96 <jeromyreimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/cart/bevy.git", branch="asset_improvements" }
# bevy = "0.2"
fastrand = "1.4"
