[package]
name = "bevy-asteroid-game-showcase"
version = "0.1.0"
authors = ["nic96 <jeromyreimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/mrk-its/bevy.git", branch="wasm", features = ["web"], default-features = false }
# bevy = "0.2"
fastrand = "1.4"
log = { version = "0.4", features = ["release_max_level_info"] }
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
env_logger = "0.7"
